--- a/style.css
+++ b/style.css
@@ -23,5 +23,41 @@ h1 {
     margin-bottom: 20px;
     color: #4a4a4a; /* Header color */
 }
+h1 {
+    text-shadow: 2px 2px 5px rgba(238, 11, 117, 0.966); /* Horizontal, vertical, blur, color */
+}
 
 /* Add more styles here as needed */
+button {
+    background-color: #7a386f;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.1em;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    margin-top: 20px;
+}
+button:hover {
+    background-color: #af82ad;
+}
+#passwordOutput {
+    background-color: #ecf0f1;
+    color: #9c4586;
+    font-size: 1.5em;
+    padding: 15px;
+    margin-top: 20px;
+    border-radius: 5px;
+    word-wrap: break-word;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(199, 101, 178, 0.644);
+}
+
+body {
+    background: linear-gradient(45deg, #da9a9a, #b12e7f);
+}
+.overlay {
+    position: relative;
+}
